--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -19,9 +19,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.12.0
-          cache: 'yarn'
-      - run: yarn
-      - run: yarn lint
+          cache: 'npm run install'
+      - run: npm run install
+      - run: npm run lint
 
   test:
     runs-on: ubuntu-latest
@@ -31,8 +31,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.11.0
-          cache: 'yarn'
-      - run: yarn
+          cache: 'npm run install'
+      - run: npm run install
 
   build:
     runs-on: ubuntu-latest
@@ -42,9 +42,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.11.0
-          cache: 'yarn'
-      - run: yarn
-      - run: yarn build
+          cache: 'npm run install'
+      - run: npm run install
+      - run: npm run build
       - name: Cache build output
         uses: actions/cache@v3
         with:
