--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.12.0
-          cache: 'npm run install'
-      - run: npm run install
+          cache: 'npm install'
+      - run: npm install
       - run: npm run lint
 
   test:
@@ -31,8 +31,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.11.0
-          cache: 'npm run install'
-      - run: npm run install
+          cache: 'npm install'
+      - run: npm install
 
   build:
     runs-on: ubuntu-latest
@@ -43,7 +43,7 @@ jobs:
         with:
           node-version: 20.11.0
           cache: 'npm run install'
-      - run: npm run install
+      - run: npm install
       - run: npm run build
       - name: Cache build output
         uses: actions/cache@v3
