--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -1,4 +1,4 @@
-name: Build Next.js Application
+name: Build and Test Next.js Application
 
 on:
   push:
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20.11.0
+          node-version: 20.12.0
       - uses: actions/cache@v3
         with:
           path: |
@@ -43,15 +43,16 @@ jobs:
             ~/.cache
           key: npm-cache-${{ hashFiles('package-lock.json') }}
       - run: npm install
+      - run: npm run test  # Запуск тестов
 
   build:
     runs-on: ubuntu-latest
-    needs: [eslint]
+    needs: [eslint, test] 
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20.11.0
+          node-version: 20.12.0
       - uses: actions/cache@v3
         with:
           path: |
