--- a/package.json
+++ b/package.json
@@ -7,24 +7,35 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "test:quick": "jest --silent"
+    "test": "jest --setupFiles=./jest.setup.js --verbose",
+    "test:coverage": "jest --coverage --setupFiles=./jest.setup.js",
+    "test:quick": "jest --silent --setupFiles=./jest.setup.js"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.28.3",
     "@reduxjs/toolkit": "^2.8.2",
+    "abort-controller": "^3.0.0",
+    "abortcontroller-polyfill": "^1.7.8",
     "axios": "^1.11.0",
+    "broadcast-channel": "^7.1.0",
     "buffer": "^6.0.3",
+    "cross-fetch": "^4.1.0",
     "crypto": "^1.0.1",
     "idb": "^8.0.3",
+    "jest-mock-extended": "^4.0.0",
+    "jest-styled-components": "^7.2.0",
+    "jest-websocket-mock": "^2.5.0",
     "next": "15.3.4",
+    "node-abort-controller": "^3.1.1",
     "ol": "^10.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-scroll": "^1.9.3",
+    "react-use": "^17.6.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.91.0",
+    "undici": "^7.16.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -37,23 +48,40 @@
     "@babel/register": "^7.28.3",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "babel-jest": "^30.1.2",
+    "@types/node-fetch": "^2.6.13",
+    "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
+    "@types/testing-library__react": "^10.0.1",
+    "babel-jest": "^30.2.0",
     "babel-plugin-styled-components": "^2.1.4",
+    "broadcastchannel-polyfill": "^1.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
-    "node-fetch": "^3.3.2",
+    "jest-location-mock": "^2.0.0",
+    "message-channel": "^2.0.0",
+    "msw": "^2.11.3",
+    "node-fetch": "^2.7.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "web-streams-polyfill": "^4.2.0",
+    "whatwg-fetch": "^3.6.20"
   },
   "main": "index.js",
   "repository": "https://github.com/ArtKonX/web-chat-frontend.git",
   "author": "ArtKonX",
-  "license": "MIT"
+  "license": "MIT",
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
