--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "jest-mock-extended": "^4.0.0",
     "jest-styled-components": "^7.2.0",
     "jest-websocket-mock": "^2.5.0",
-    "next": "15.3.4",
+    "next": "^15.3.6",
     "node-abort-controller": "^3.1.1",
     "ol": "^10.6.1",
     "react": "^19.0.0",
